--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 html {
   box-sizing: border-box;
-  background-color: #eee9de;
-  font-family: Lato, sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  background-color: #eee9de;
+  font-family: 'Lato', sans-serif;
 }
