--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,12 @@ body {
 a {
   text-decoration: none;
   color: #333;
-  font-size: 1.5rem;
-  border-width: 5px;
-  border-radius: 5px;
+  font-size: 1.3rem;
+  border-style: solid;
   border-color: #333;
-  padding: 1em;
+  border-width: 3px;
+  border-radius: 10px;
+  padding: .4em .75em .5em;
 }
 
 a:hover {
