Fix wording in css

--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,13 @@ body {
   line-height: 1.5;
   margin: 1.5rem;
   max-width: 25em;
-  display: inline;
+  display: inline-block;
 }
 
 .image {
   width: 100%;
   vertical-align: center;
-  display: inline;
+  display: inline-block;
   max-width: 25em;
 }
 
