--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.5;
   margin: 1.5rem;
   max-width: 25em;
+  display: inline-block;
 }
 
 .image {
@@ -19,6 +20,8 @@ body {
   vertical-align: center;
   display: inline-block;
   max-width: 25em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
